# hpc_tandem_predictions

./: .gitignore  LICENSE  README.md  environment.yml  setup.cfg
data/: nodes.parquet  partitions.parquet
notebooks/queuetime_prediction/: analyze_results_regression.ipynb  model_training.ipynb  system_state.ipynb  uncertainty_analysis.ipynb
notebooks/runtime_prediction/: Combine_Results.ipynb  Eagle_Data_Visualization.ipynb  Final_Model_Analysis.ipynb  HPO_Visualization.ipynb  Hyperparameter_Optimization.ipynb  Model_Optimization.ipynb  Runtime_Variation.ipynb
src/sbatch_pred/queuetime_prediction/: model_training.py  system_state.py  uncertainty_analysis.py
src/sbatch_pred/runtime_prediction/: data_preprocessing.py  model_optimization.py  operation_support.py
