[metadata]
name = sbatchpred
version = 0.1.0
description = A package for user-facing runtime and queue time predictions from job scripts.
authors = Kevin Menear, Dmitry Duplyakin
author_email = kevin.menear@nrel.gov, dmitry.duplyakin@nrel.gov
license = BSD3
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pandas
    numpy
    scikit-learn
    xgboost
    matplotlib
    seaborn
    jupyterlab
package_dir=
    =src

[options.packages.find]
where=src
